# humanoid-asimov

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  SELF_REVIEW.md  STAGE1_ESKF_REVIEW.md  STAGE2_FRONTEND_DESIGN.md  STAGE2_VIO_DESIGN.md  STAGE3_CALIB_DESIGN.md  index.html
docs/dashboard/: calib.html  embedded.html  estimator.html  frontend.html  imu101.html  index.html  nav.html  stage0.html  vio.html
scripts/: build_dashboard.py  check_calib_jacobian.py  check_eskf_jacobian.py  check_features.py  check_projection.py  check_vio_jacobian.py  embed_vio_win.py  fetch_model.sh  nav.html  plot_frontend_result.py  render_loop_video.py  render_robot_sensors.py  run_calib.py  run_embedded.py  run_estimator.py  run_frontend.py  run_livedrift.py  run_nav.py  run_nav5b.py  run_neckscan.py  run_nees.py  run_timing.py  run_vio.py  run_walk.py  trackchart.py  view_loop.py  view_vio.py  view_walk.py
src/humanoid_asimov/: __init__.py  calib.py  embedded.py  estimator.py  nav.py  scene.py  sensors.py  timing.py  vio.py  vision.py  walk.py
tests/: test_sim.py  test_timing.py
