[project]
name = "humanoid-asimov"
version = "0.0.1"
description = "Monocular + IMU + leg-odometry state estimator with online self-calibration for a bipedal humanoid in MuJoCo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.10",
    "numpy>=1.26",
    "pillow>=10",
    "scipy>=1.11",
    "opencv-python>=4.9",
]

[dependency-groups]
dev = [
    "matplotlib>=3.8",
    "ipython>=8",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanoid_asimov"]
